...
                        <subviews>
                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="OjU-E4-cEz">
                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
                                <color key="barTintColor" name="Blue"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" smartDashesType="no" smartInsertDeleteType="no"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchBar"/>
                                </userDefinedRuntimeAttributes>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sL2-2q-Do9">
                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchView"/>
                        </userDefinedRuntimeAttributes>
                    </view>
                    <navigationItem key="navigationItem" title="Search Tweets" id="lMz-vv-wDH"/>
                    <connections>
                        <outlet property="searchBar" destination="OjU-E4-cEz" id="RzE-nN-dC6"/>
                        <outlet property="searchDisplayController" destination="eTt-bA-OTg" id="rdi-ri-jbw"/>
                        <outlet property="tweetListTableView" destination="sL2-2q-Do9" id="L8e-M3-FkL"/>
                        <segue destination="mlC-xO-pw8" kind="show" identifier="userInfoSegue" id="edt-hU-slV"/>
                    </connections>
...
